Fixed issues with the header. Everything is aligned and can now wrap and shrink properly.

--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@
     background-color: #1f2937;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 90px;
     margin: -10px;
-    align-items: center;
-
+    justify-content: space-around;
 }
 
 .header, .intro {
@@ -21,20 +20,24 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 1000px;
     margin: 10px;
-    padding-bottom: 10px;
     margin-top: -10px;
 }
 
 .intro {
     display: flex;
-    
+    padding-top: 30px;
 }
 
 .introleft {
     display: flex;
     flex-direction: column;
+    padding-right: 40px;
+}
+
+.headerlinks {
+    display: flex;
+    gap: 20px;
 }
 
 
